--- a/index_RO_dash2.html
+++ b/index_RO_dash2.html
@@ -208,6 +208,7 @@ function dashboard(id, fData){
         International:"#0f6f95",
         Labor:"#128aba",
         Law:"#16a6df",
+	Media:"#ffffff",
         Migrants:"#33b7eb",
         Poverty:"#58c4ee",
         Religion: "#7dd1f2",
@@ -221,7 +222,7 @@ function dashboard(id, fData){
   }[c]; }
 
     // compute total for each state.
-    fData.forEach(function(d){d.total=d.freq.Aging+d.freq.Agriculture+d.freq.Animals+d.freq.Culture+d.freq.Capacity+d.freq.Disabilities+d.freq.Disaster+d.freq.Development+d.freq.Education+d.freq.Energy+d.freq.Environment+d.freq.Ethnic+d.freq.Gender+d.freq.Health+d.freq.Infrastructure+d.freq.International+d.freq.Labor+d.freq.Law+d.freq.Migrants+d.freq.Poverty+d.freq.Religion+d.freq.Rural+d.freq.Sport+d.freq.Technology+d.freq.Tourism+d.freq.Trade+d.freq.Urban+d.freq.Youth;});
+    fData.forEach(function(d){d.total=d.freq.Aging+d.freq.Agriculture+d.freq.Animals+d.freq.Culture+d.freq.Capacity+d.freq.Disabilities+d.freq.Disaster+d.freq.Development+d.freq.Education+d.freq.Energy+d.freq.Environment+d.freq.Ethnic+d.freq.Gender+d.freq.Health+d.freq.Infrastructure+d.freq.International+d.freq.Labor+d.freq.Law+d.freq.Media+d.freq.Migrants+d.freq.Poverty+d.freq.Religion+d.freq.Rural+d.freq.Sport+d.freq.Technology+d.freq.Tourism+d.freq.Trade+d.freq.Urban+d.freq.Youth;});
 
     // function to handle histogram.
     //USE THIS AREA TO ADJUST LOCATION OF X AXIS AND MAX BAR HEIGHT
@@ -435,7 +436,7 @@ var tooltip = d3.select("body").append("div").attr("class", "toolTip");
     }
 
     // calculate total frequency by segment for all state.
-    var tF = ['Aging','Agriculture','Animals','Culture','Capacity','Disabilities','Disaster','Development','Education','Energy','Environment','Ethnic','Gender','Health','Infrastructure','International','Labor','Law','Migrants','Poverty','Religion','Rural','Sport','Technology','Tourism','Trade','Urban','Youth'].map(function(d){
+    var tF = ['Aging','Agriculture','Animals','Culture','Capacity','Disabilities','Disaster','Development','Education','Energy','Environment','Ethnic','Gender','Health','Infrastructure','International','Labor','Law','Media','Migrants','Poverty','Religion','Rural','Sport','Technology','Tourism','Trade','Urban','Youth'].map(function(d){
         return {type:d, freq: d3.sum(fData.map(function(t){ return t.freq[d];}))};
     });
 
@@ -478,7 +479,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -509,7 +511,8 @@ var freqData=[
 	International: 1,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -540,7 +543,8 @@ var freqData=[
 	International: 2,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 1,
@@ -571,7 +575,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -602,7 +607,8 @@ var freqData=[
 	International: 1,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -633,7 +639,8 @@ var freqData=[
 	International: 8,
 	Labor: 2,
 	Law: 2,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 1,
@@ -664,7 +671,8 @@ var freqData=[
 	International: 11,
 	Labor: 2,
 	Law: 1,
-  Migrants: 5,
+	Media: 0,
+  	Migrants: 5,
 	Poverty: 17,
   Religion: 0,
 	Rural: 3,
@@ -695,7 +703,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -726,7 +735,8 @@ var freqData=[
 	International: 1,
 	Labor: 1,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -758,7 +768,8 @@ var freqData=[
 	International: 4,
 	Labor: 1,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+ 	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -789,7 +800,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -820,7 +832,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -851,7 +864,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -883,7 +897,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -915,7 +930,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -946,7 +962,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -977,7 +994,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -1008,7 +1026,8 @@ var freqData=[
 	International: 1,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -1039,7 +1058,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -1070,7 +1090,8 @@ var freqData=[
 	International: 1,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 2,
   Religion: 0,
 	Rural: 2,
@@ -1101,7 +1122,8 @@ var freqData=[
 	International: 3,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 1,
   Religion: 1,
 	Rural: 0,
@@ -1132,7 +1154,8 @@ var freqData=[
   	International: 1,
   	Labor: 0,
   	Law: 0,
-    Migrants: 0,
+	Media: 0,
+    	Migrants: 0,
   	Poverty: 0,
     Religion: 0,
   	Rural: 0,
@@ -1163,7 +1186,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
@@ -1194,7 +1218,8 @@ var freqData=[
 	International: 0,
 	Labor: 0,
 	Law: 1,
-  Migrants: 0,
+	Media: 0,
+  	Migrants: 0,
 	Poverty: 2,
   Religion: 0,
 	Rural: 1,
@@ -1225,7 +1250,8 @@ var freqData=[
 	International: 7,
 	Labor: 0,
 	Law: 0,
-  Migrants: 1,
+	Media: 0,
+  	Migrants: 1,
 	Poverty: 7,
   Religion: 0,
 	Rural: 1,
