--- a/index_RO_dash2.html
+++ b/index_RO_dash2.html
@@ -487,7 +487,7 @@ var freqData=[
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 1,
+	Trade: 2,
 	Urban: 0,
 	Youth: 1}},
 	{
@@ -522,6 +522,40 @@ var freqData=[
 	Trade: 2,
 	Urban: 1,
 	Youth: 0}},
+	
+	{
+	origin: "Brazil",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 1,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+  Gender: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Media: 0,
+  	Migrants: 0,
+	Poverty: 0,
+  Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Urban: 0,
+	Youth: 0}},
+	
 {
 	origin: "Canada",
 	freq:{
@@ -533,14 +567,14 @@ var freqData=[
 	Disabilities: 0,
 	Disaster: 0,
 	Development: 0,
-	Education: 0,
+	Education: 1,
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
   Gender: 0,
 	Health: 1,
 	Infrastructure: 0,
-	International: 2,
+	International: 3,
 	Labor: 0,
 	Law: 0,
 	Media: 0,
@@ -549,11 +583,44 @@ var freqData=[
   Religion: 0,
 	Rural: 1,
 	Sport: 0,
-	Technology: 0,
+	Technology: 1,
 	Tourism: 0,
-	Trade: 4,
+	Trade: 5,
 	Urban: 0,
 	Youth: 1}},
+	
+	{
+	origin: "Croatia",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 1,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+  Gender: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Media: 0,
+  	Migrants: 0,
+	Poverty: 0,
+  Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Urban: 0,
+	Youth: 0}},
 {
 	origin: "Denmark",
 	freq:{
@@ -624,56 +691,56 @@ var freqData=[
 	Aging: 0,
 	Agriculture: 0,
 	Animals: 0,
-	Culture: 0,
+	Culture: 1,
 	Capacity: 1,
 	Disabilities: 0,
 	Disaster: 0,
 	Development: 3,
-	Education: 6,
+	Education: 7,
 	Energy: 0,
 	Environment: 4,
 	Ethnic: 1,
   Gender: 1,
 	Health: 2,
 	Infrastructure: 0,
-	International: 8,
-	Labor: 2,
-	Law: 2,
+	International: 9,
+	Labor: 3,
+	Law: 3,
 	Media: 0,
   	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
 	Rural: 1,
 	Sport: 0,
-	Technology: 0,
+	Technology: 1,
 	Tourism: 0,
-	Trade: 3,
+	Trade: 7,
 	Urban: 1,
 	Youth: 4}},
 {
 	origin: "Hong Kong",
 	freq:{
 	Aging: 2,
-	Agriculture: 0,
+	Agriculture: 1,
 	Animals: 0,
-	Culture: 8,
-	Capacity: 8,
-	Disabilities: 4,
-	Disaster: 21,
-	Development: 1,
-	Education: 23,
+	Culture: 9,
+	Capacity: 11,
+	Disabilities: 5,
+	Disaster: 23,
+	Development: 2,
+	Education: 27,
 	Energy: 0,
 	Environment: 3,
 	Ethnic: 1,
   Gender: 2,
-	Health: 11,
+	Health: 14,
 	Infrastructure: 6,
-	International: 11,
+	International: 14,
 	Labor: 2,
 	Law: 1,
 	Media: 0,
   	Migrants: 5,
-	Poverty: 17,
+	Poverty: 18,
   Religion: 0,
 	Rural: 3,
 	Sport: 0,
@@ -681,7 +748,7 @@ var freqData=[
 	Tourism: 0,
 	Trade: 7,
 	Urban: 1,
-	Youth: 20}},
+	Youth: 21}},
 {
 	origin: "India",
 	freq:{
@@ -757,15 +824,15 @@ var freqData=[
 	Capacity: 0,
 	Disabilities: 0,
 	Disaster: 0,
-	Development: 1,
+	Development: 2,
 	Education: 0,
-	Energy: 0,
-	Environment: 2,
+	Energy: 1,
+	Environment: 3,
 	Ethnic: 0,
   Gender: 0,
 	Health: 0,
 	Infrastructure: 0,
-	International: 4,
+	International: 5,
 	Labor: 1,
 	Law: 0,
 	Media: 0,
@@ -775,8 +842,8 @@ var freqData=[
 	Rural: 0,
 	Sport: 1,
 	Technology: 1,
-	Tourism: 2,
-	Trade: 31,
+	Tourism: 3,
+	Trade: 37,
 	Urban: 0,
 	Youth: 0}},
 {
@@ -811,6 +878,39 @@ var freqData=[
 	Trade: 1,
 	Urban: 1,
 	Youth: 1}},
+		{
+	origin: "Madagascar",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 1,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+  Gender: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Media: 0,
+  	Migrants: 0,
+	Poverty: 0,
+  Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Urban: 0,
+	Youth: 0}},
+	
 {
 	origin: "Malaysia",
 	freq:{
@@ -886,10 +986,10 @@ var freqData=[
 	Capacity: 0,
 	Disabilities: 0,
 	Disaster: 0,
-	Development: 0,
-	Education: 1,
+	Development: 1,
+	Education: 4,
 	Energy: 0,
-	Environment: 0,
+	Environment: 1,
 	Ethnic: 0,
   Gender: 0,
 	Health: 0,
@@ -901,11 +1001,11 @@ var freqData=[
   	Migrants: 0,
 	Poverty: 0,
   Religion: 0,
-	Rural: 0,
+	Rural: 1,
 	Sport: 0,
-	Technology: 1,
+	Technology: 3,
 	Tourism: 0,
-	Trade: 1,
+	Trade: 3,
 	Urban: 0,
 	Youth: 0}},
 	
@@ -1032,9 +1132,9 @@ var freqData=[
   Religion: 0,
 	Rural: 0,
 	Sport: 0,
-	Technology: 2,
+	Technology: 3,
 	Tourism: 0,
-	Trade: 17,
+	Trade: 19,
 	Urban: 0,
 	Youth: 0}},
 {
@@ -1075,7 +1175,7 @@ var freqData=[
 	Aging: 0,
 	Agriculture: 0,
 	Animals: 0,
-	Culture: 0,
+	Culture: 1,
 	Capacity: 2,
 	Disabilities: 0,
 	Disaster: 3,
@@ -1087,18 +1187,18 @@ var freqData=[
   Gender: 2,
 	Health: 3,
 	Infrastructure: 0,
-	International: 1,
+	International: 2,
 	Labor: 0,
 	Law: 0,
-	Media: 0,
+	Media: 1,
   	Migrants: 0,
 	Poverty: 2,
   Religion: 0,
 	Rural: 2,
-	Sport: 1,
-	Technology: 1,
+	Sport: 2,
+	Technology: 2,
 	Tourism: 0,
-	Trade: 3,
+	Trade: 4,
 	Urban: 0,
 	Youth: 3}},
 {
@@ -1130,7 +1230,7 @@ var freqData=[
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 5,
+	Trade: 6,
 	Urban: 0,
 	Youth: 1}},
   {
@@ -1208,7 +1308,7 @@ var freqData=[
 	Disabilities: 0,
 	Disaster: 2,
 	Development: 1,
-	Education: 2,
+	Education: 3,
 	Energy: 0,
 	Environment: 2,
 	Ethnic: 0,
@@ -1217,16 +1317,16 @@ var freqData=[
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
-	Law: 1,
+	Law: 2,
 	Media: 0,
   	Migrants: 0,
 	Poverty: 2,
   Religion: 0,
 	Rural: 1,
 	Sport: 0,
-	Technology: 0,
+	Technology: 1,
 	Tourism: 0,
-	Trade: 5,
+	Trade: 7,
 	Urban: 0,
 	Youth: 1}},
 {
@@ -1236,30 +1336,30 @@ var freqData=[
 	Agriculture: 1,
 	Animals: 5,
 	Culture: 2,
-	Capacity: 5,
+	Capacity: 6,
 	Disabilities: 4,
 	Disaster: 6,
 	Development: 6,
-	Education: 19,
-	Energy: 1,
-	Environment: 13,
+	Education: 21,
+	Energy: 3,
+	Environment: 18,
 	Ethnic: 1,
   Gender: 3,
 	Health: 15,
-	Infrastructure: 2,
-	International: 7,
+	Infrastructure: 3,
+	International: 8,
 	Labor: 0,
-	Law: 0,
+	Law: 2,
 	Media: 0,
   	Migrants: 1,
 	Poverty: 7,
   Religion: 0,
 	Rural: 1,
 	Sport: 0,
-	Technology: 1,
+	Technology: 2,
 	Tourism: 2,
 	Trade: 23,
-	Urban: 1,
+	Urban: 3,
 	Youth: 10}}
 ]
 ;
