--- a/index_RO_dash2.html
+++ b/index_RO_dash2.html
@@ -1233,6 +1233,41 @@ var freqData=[
 	Trade: 6,
 	Urban: 0,
 	Youth: 1}},
+		{
+	origin: "Thailand",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 1,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+  Gender: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 1,
+	Labor: 0,
+	Law: 0,
+	Media: 0,
+  	Migrants: 0,
+	Poverty: 0,
+  Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Urban: 0,
+	Youth: 0}},
+	
+	
+	
   {
   	origin: "Turkey",
   	freq:{
