--- a/index_TA_dash2.html
+++ b/index_TA_dash2.html
@@ -151,7 +151,7 @@ padding:0px;
 
 
 <div id="wrapper">
-<div id="header"><h1>Number of Temporary Activities in Certain Fields of Work, by NGOs&rsquo; Country/Region of Origin, January-October 2017</h1></div>
+<div id="header"><h1>Number of Temporary Activities in Certain Fields of Work, by NGOs&rsquo; Country/Region of Origin, January-November 2017</h1></div>
 <div id='legenddiv'></div>
 <div id='piediv'></div>
 <div id='histogramdiv'></div>
@@ -507,37 +507,37 @@ var freqData=[
   Migrants: 1,
   Poverty: 2,
   Religion: 0,
-  Rural: 3,
+  Rural: 4,
   Sport: 0,
   Technology: 2,
   Tourism: 0,
   Trade: 1,
   Urban: 1,
-  Youth: 4}},
+  Youth: 5}},
 {
 	origin: "Hong Kong",
   freq:{
-	Aging: 8,
+	Aging: 9,
 	Agriculture: 4,
 	Animals: 0,
-	Culture: 3,
-	Capacity: 18,
+	Culture: 4,
+	Capacity: 19,
 	Disabilities: 14,
 	Disaster: 33,
 	Development: 7,
-	Education: 77,
+	Education: 99,
 	Energy: 1,
-	Environment: 11,
+	Environment: 12,
 	Ethnic: 2,
-  Gender: 4,
+  Gender: 5,
 	Health: 11,
-	Infrastructure: 23,
+	Infrastructure: 28,
 	International: 0,
-	Labor: 1,
-	Law: 0,
+	Labor: 3,
+	Law: 1,
   	Media: 0,
     Migrants: 0,
-	Poverty: 25,
+	Poverty: 27,
   Religion: 1,
 	Rural: 7,
 	Sport: 1,
@@ -545,7 +545,7 @@ var freqData=[
 	Tourism: 0,
 	Trade: 0,
 	Urban: 1,
-	Youth: 49}},
+	Youth: 50}},
 	{
 	origin: "Italy",
   freq:{
@@ -589,7 +589,7 @@ var freqData=[
 	Disabilities: 0,
 	Disaster: 0,
 	Development: 0,
-	Education: 1,
+	Education: 3,
 	Energy: 0,
 	Environment: 1,
 	Ethnic: 0,
@@ -653,7 +653,7 @@ var freqData=[
 	Disabilities: 0,
 	Disaster: 0,
 	Development: 0,
-	Education: 1,
+	Education: 3,
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
@@ -668,13 +668,46 @@ var freqData=[
 	Poverty: 0,
   Religion: 0,
 	Rural: 0,
+	Sport: 1,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 0,
+	Urban: 0,
+	Youth: 2}},
+	
+	{
+		origin: "Malaysia",
+  freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 1,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+  Gender: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+  	Media: 0,
+    Migrants: 0,
+	Poverty: 0,
+  Religion: 0,
+	Rural: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
 	Trade: 0,
 	Urban: 0,
-	Youth: 1}},
-
+	Youth: 0}},
+	
   {
   	origin: "Singapore",
     freq:{
@@ -714,6 +747,39 @@ var freqData=[
 	Aging: 0,
 	Agriculture: 0,
 	Animals: 0,
+	Culture: 2,
+	Capacity: 1,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 1,
+	Energy: 0,
+	Environment: 1,
+	Ethnic: 0,
+  Gender: 0,
+	Health: 2,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 1,
+  	Media: 0,
+    Migrants: 0,
+	Poverty: 0,
+  Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 0,
+	Urban: 0,
+	Youth: 1}},
+	
+	{
+		origin: "Sri Lanka",
+  freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
 	Culture: 0,
 	Capacity: 0,
 	Disabilities: 0,
@@ -721,10 +787,10 @@ var freqData=[
 	Development: 0,
 	Education: 0,
 	Energy: 0,
-	Environment: 1,
+	Environment: 0,
 	Ethnic: 0,
   Gender: 0,
-	Health: 1,
+	Health: 0,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
@@ -737,9 +803,11 @@ var freqData=[
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 0,
+	Trade: 1,
 	Urban: 0,
 	Youth: 0}},
+	
+	
 {
 	origin: "Sweden",
   freq:{
@@ -815,16 +883,16 @@ var freqData=[
 	Disabilities: 0,
 	Disaster: 0,
 	Development: 0,
-	Education: 1,
+	Education: 3,
 	Energy: 0,
 	Environment: 2,
 	Ethnic: 0,
-  Gender: 0,
+  Gender: 1,
 	Health: 0,
 	Infrastructure: 0,
 	International: 2,
 	Labor: 0,
-	Law: 0,
+	Law: 1,
   	Media: 0,
     Migrants: 0,
 	Poverty: 0,
@@ -900,17 +968,52 @@ var freqData=[
   Trade: 0,
   Urban: 1,
   Youth: 0}},
+	
+	{
+		origin: "Canada",
+  freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 1,
+	Ethnic: 0,
+  Gender: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+  	Media: 0,
+    Migrants: 0,
+	Poverty: 0,
+  Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 1,
+	Tourism: 0,
+	Trade: 0,
+	Urban: 0,
+	Youth: 0}},
+	
+	
 {
 	origin: "United Kingdom",
   freq:{
   Aging: 0,
   Agriculture: 0,
-  Animals: 0,
+  Animals: 1,
   Culture: 0,
   Capacity: 0,
   Disabilities: 0,
   Disaster: 0,
-  Development: 0,
+  Development: 1,
   Education: 0,
   Energy: 0,
   Environment: 0,
@@ -939,20 +1042,20 @@ var freqData=[
   Agriculture: 0,
   Animals: 4,
   Culture: 1,
-  Capacity: 3,
+  Capacity: 4,
   Disabilities: 7,
   Disaster: 2,
-  Development: 1,
-  Education: 19,
+  Development: 3,
+  Education: 21,
   Energy: 1,
-  Environment: 8,
+  Environment: 10,
   Ethnic: 0,
   Gender: 2,
-  Health: 12,
+  Health: 14,
   Infrastructure: 2,
-  International: 7,
+  International: 8,
   Labor: 1,
-  Law: 3,
+  Law: 7,
   Media: 1,
   Migrants: 0,
   Poverty: 2,
@@ -961,9 +1064,9 @@ var freqData=[
   Sport: 0,
   Technology: 2,
   Tourism: 0,
-  Trade: 2,
-  Urban: 2,
-  Youth: 19}},
+  Trade: 5,
+  Urban: 3,
+  Youth: 20}},
   {
   	origin: "Vietnam",
     freq:{
@@ -1001,5 +1104,5 @@ var freqData=[
 dashboard('#dashboard',freqData);
 d3.select("body").append("div")
 .attr("class", "tooltip1")
-.html("<em><ul><li>Each temporary activity may be related to multiple fields of work, and therefore the totals shown in this chart are higher than the total number of temporary activities during the same period. We designated fields based on the activity titles listed on the Ministry of Public Security website.</li><li>Only activities that began on or before September 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li><li>Only one country or region of origin for each organization is included, based on organizations’ public information.</li><li>Some fields of work have been abbreviated here: Animal Protection is shortened to Animals, Arts and Culture to Culture, Civil Society Capacity-Building to Capacity, Disaster Relief to Disaster, Economic Development to Development, Ethnic Affairs to Ethnic, Gender Issues to Gender, International Relations/Exchange to International, Law and Governance to Law, Poverty Alleviation to Poverty, Rural Issues/Development to Rural, and Urban Issues/Development to Urban.</li></ul></em>");
+.html("<em><ul><li>Each temporary activity may be related to multiple fields of work, and therefore the totals shown in this chart are higher than the total number of temporary activities during the same period. We designated fields based on the activity titles listed on the Ministry of Public Security website.</li><li>Only activities that began on or before November 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li><li>Only one country or region of origin for each organization is included, based on organizations’ public information.</li><li>Some fields of work have been abbreviated here: Animal Protection is shortened to Animals, Arts and Culture to Culture, Civil Society Capacity-Building to Capacity, Disaster Relief to Disaster, Economic Development to Development, Ethnic Affairs to Ethnic, Gender Issues to Gender, International Relations/Exchange to International, Law and Governance to Law, Poverty Alleviation to Poverty, Rural Issues/Development to Rural, and Urban Issues/Development to Urban.</li></ul></em>");
 </script>
