--- a/index.html
+++ b/index.html
@@ -264,6 +264,27 @@
       },
 
       {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.437903, 39.911118
+      ]
+      },
+      "properties": {
+      "orgname_en": "African General Chamber of Commerce in China",
+      "orgname_ch": "中国-非洲总商会",
+      "psu_en": "Beijing Commission of Commerce",
+      "originloc": "Madagascar",
+      "sector": "Trade",
+      "regloc": "Beijing",
+      "regdate": "November 30, 2017",
+      "actarea": "Beijing"
+      }
+      },
+
+
+      {
         "type": "Feature",
         "geometry": {
           "type": "Point",
@@ -555,6 +576,71 @@
         }
       },
 
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.463273, 39.952790
+      ]
+      },
+      "properties": {
+      "orgname_en": "Business & Human Rights Resource Centre",
+      "orgname_ch": "德国工业联合会",
+      "psu_en": "Beijing Commission of Commerce",
+      "originloc": "Germany",
+      "sector": "International Relations/Exchange, Law and Governance, Trade",
+      "regloc": "Beijing",
+      "regdate": "November 30, 2017",
+      "actarea": "China",
+      "website_en": "https://business-humanrights.org/en",
+      "website_ch": "https://business-humanrights.org/zh-hans"
+      }
+      },
+
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.437781, 39.911476
+      ]
+      },
+      "properties": {
+      "orgname_en": "C40 Cities",
+      "orgname_ch": "C40城市气候领导联盟",
+      "psu_en": "Beijing Development and Reform Commission",
+      "originloc": "United States",
+      "sector": "Energy, Environment, Urban Issues/Development",
+      "regloc": "Beijing",
+      "regdate": "November 30, 2017",
+      "actarea": "China",
+      "website_en": "http://www.c40.org/",
+      "website_ch": "http://www.c40.org/china"
+      }
+      },
+
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.490191, 39.805666
+      ]
+      },
+      "properties": {
+      "orgname_en": "Canada China Agriculture Friendship Society (Beijing)",
+      "orgname_ch": "加拿大中国农业友好协会",
+      "psu_en": "Beijing Commission of Commerce",
+      "originloc": "Canada",
+      "sector": "Education, International Relations/Exchange, Technology, Trade",
+      "regloc": "Beijing",
+      "regdate": "November 30, 2017",
+      "actarea": "Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hubei, Hunan, Jiangsu, Jiangxi, Ningxia, Qinghai, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang",
+      "website_en": "https://ccafs.ca/"
+      }
+      },
+
        {
         "type": "Feature",
         "geometry": {
@@ -564,7 +650,7 @@
           ]
         },
         "properties": {
-          "orgname_en": "Canada China Agriculture Friendship Society",
+          "orgname_en": "Canada China Agriculture Friendship Society (Liaoning)",
           "orgname_ch": "加拿大中国农业友好协会",
           "psu_en": "Liaoning Department of Commerce",
           "originloc": "Canada",
@@ -1182,6 +1268,28 @@
           "website_en": "https://www.clientearth.org/location/china/"
         }
       },
+
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.470603, 39.909349
+      ]
+      },
+      "properties": {
+      "orgname_en": "Confederação Nacional do Transporte (CNT)",
+      "orgname_ch": "巴西全国运输联合会",
+      "psu_en": "Beijing Commission of Transport",
+      "originloc": "Brazil",
+      "sector": "Trade",
+      "regloc": "Beijing",
+      "regdate": "November 28, 2017",
+      "actarea": "Beijing",
+      "website_ch": "http://china.cnt.org.br/Paginas/index.aspx"
+      }
+      },
+
       {
         "type": "Feature",
         "geometry": {
@@ -1561,6 +1669,27 @@
 }
 },
 
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+116.459336, 39.933462
+]
+},
+"properties": {
+"orgname_en": "European Broadcasting Union (EBU)",
+"orgname_ch": "欧洲广播联盟",
+"psu_en": "State Administration of Press, Publication, Radio, Film and Television",
+"originloc": "Switzerland",
+"sector": "Arts and Culture, International Relations/Exchange, Media, Sport, Technology",
+"regloc": "Beijing",
+"regdate": "November 28, 2017",
+"actarea": "China",
+"website_en": "https://www.ebu.ch/home"
+}
+},
+
       {
         "type": "Feature",
         "geometry": {
@@ -1850,6 +1979,29 @@
           "actarea": "China"
         }
       },
+
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.462684, 39.945839
+      ]
+      },
+      "properties": {
+      "orgname_en": "German Academic Exchange Service (DAAD)",
+      "orgname_ch": "德国学术交流中心",
+      "psu_en": "Ministry of Education",
+      "originloc": "Germany",
+      "sector": "Education",
+      "regloc": "Beijing",
+      "regdate": "November 30, 2017",
+      "actarea": "Beijing, Chongqing, Gansu, Hebei, Heilongjiang, Henan, Hubei, Inner Mongolia, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanxi, Sichuan, Tianjin, Tibet, Xinjiang, Yunnan",
+      "website_en": "https://www.daad.de/en/",
+      "website_ch": "http://www.daad.org.cn/zh/"
+      }
+      },
+
 
       {
         "type": "Feature",
@@ -2849,6 +3001,29 @@
           "website_ch": "http://china.inta.org/"
         }
       },
+
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.460898, 39.930440
+      ]
+      },
+      "properties": {
+      "orgname_en": "IRU",
+      "orgname_ch": "国际道路运输联盟",
+      "psu_en": "Beijing Commission of Transport",
+      "originloc": "Switzerland",
+      "sector": "Trade",
+      "regloc": "Beijing",
+      "regdate": "November 28, 2017",
+      "actarea": "Beijing, Chongqing, Guangxi, Heilongjiang, Inner Mongolia, Shanghai, Sichuan, Xinjiang",
+      "website_en": "https://www.iru.org/",
+      "website_ch": "https://www.iru.org/zh/who-we-are"
+      }
+      },
+
 {
 "type": "Feature",
 "geometry": {
@@ -2948,6 +3123,27 @@
     "website_ch": "http://www.tj-kobe.org/zh/"
   }
 },
+
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+116.438464, 39.907471
+]
+},
+"properties": {
+"orgname_en": "Japan-China Economic Association (Beijing)",
+"orgname_ch": "一般财团法人日中经济协会",
+"psu_en": "Beijing Commission of Commerce",
+"originloc": "Japan",
+"sector": "Economic Development, Trade",
+"regloc": "Beijing",
+"regdate": "November 30, 2017",
+"actarea": "Beijing, Fujian, Guangdong, Hebei, Henan, Shandong, Tianjin"
+}
+},
+
 {
   "type": "Feature",
   "geometry": {
@@ -2957,7 +3153,7 @@
     ]
   },
   "properties": {
-    "orgname_en": "Japan-China Economic Association",
+    "orgname_en": "Japan-China Economic Association (Liaoning)",
     "orgname_ch": "一般财团法人日中经济协会",
     "psu_en": "Liaoning Department of Commerce",
     "originloc": "Japan",
@@ -4193,7 +4389,26 @@
         }
       },
 
-
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.458876, 39.918914
+      ]
+      },
+      "properties": {
+      "orgname_en": "Peter Lee Care for Life Foundation",
+      "orgname_ch": "李家杰珍惜生命基金",
+      "psu_en": "Chinese People’s Association for Friendship with Foreign Countries",
+      "originloc": "Hong Kong",
+      "sector": "Agriculture, Civil Society Capacity-Building, Education, Health, International Relations/Exchange",
+      "regloc": "Beijing",
+      "regdate": "November 30, 2017",
+      "actarea": "China",
+      "website_ch": "http://www.ftdhz.org/"
+      }
+      },
 
       {
       "type": "Feature",
@@ -4382,6 +4597,27 @@
 }
 },
 
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+116.454472, 39.915865
+]
+},
+"properties": {
+"orgname_en": "Rocky Mountain Institute",
+"orgname_ch": "落基山研究所",
+"psu_en": "National Energy Administration",
+"originloc": "United States",
+"sector": "Energy, Environment, Infrastructure, Law and Governance, Technology, Urban Issues/Development",
+"regloc": "Beijing",
+"regdate": "November 29, 2017",
+"actarea": "Beijing",
+"website_en": "https://www.rmi.org/",
+"website_ch": "http://www.rmi-china.com/index.php"
+}
+},
 
 {
   "type": "Feature",
@@ -4883,7 +5119,27 @@
       }
       },
 
-
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.442332, 39.893146
+      ]
+      },
+      "properties": {
+      "orgname_en": "The Grain and Feed Trade Association (GAFTA)",
+      "orgname_ch": "谷物与饲料贸易协会",
+      "psu_en": "Beijing Bureau of Agriculture",
+      "originloc": "United Kingdom",
+      "sector": "Education, Law and Governance, Technology, Trade",
+      "regloc": "Beijing",
+      "regdate": "November 29, 2017",
+      "actarea": "Beijing, Guangdong, Hebei, Liaoning, Shandong, Shanghai",
+      "website_en": "https://www.gafta.com/",
+      "website_ch": "http://www.gafta.com.cn/"
+      }
+      },
 
       {
         "type": "Feature",
