--- a/index.html
+++ b/index.html
@@ -465,6 +465,28 @@
 "actarea": "Beijing, Hebei, Guangdong, Yunnan, Shaanxi"
 }
 },
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+116.458329, 39.957843
+]
+},
+"properties": {
+"orgname_en": "The Association For Manufacturing Technology (AMT)",
+"orgname_ch": "机械制造技术协会",
+"psu_en": "Beijing Science and Technology Commission",
+"originloc": "United States",
+"sector": "Technology, Trade",
+"regloc": "Beijing",
+"regdate": "December 1, 2017",
+"actarea": "China",
+"website_en": "http://www.amtchina.org/en/index.asp",
+"website_ch": "http://www.amtchina.org/cn/"
+}
+},
+
 
           {
         "type": "Feature",
@@ -2334,6 +2356,28 @@
         }
       },
       {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.448344, 39.907841
+      ]
+      },
+      "properties": {
+      "orgname_en": "Handicap International",
+      "orgname_ch": "国际助残联盟",
+      "psu_en": "China Disabled Person’s Federation",
+      "originloc": "France",
+      "sector": "Disabilities, Disaster Relief, Health, Law and Governance, Poverty Alleviation",
+      "regloc": "Beijing",
+      "regdate": "December 6, 2017",
+      "actarea": "Beijing, Shaanxi, Yunnan",
+      "website_en": "http://www.disabilitychina.org/"
+      }
+      },
+
+
+      {
         "type": "Feature",
         "geometry": {
           "type": "Point",
@@ -3716,6 +3760,29 @@
           "website_en": "http://www.lipoid-stiftung.de/en/homepage/"
         }
       },
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      117.256796, 31.869657
+      ]
+      },
+      "properties": {
+      "orgname_en": "Love Without Borders Foundation",
+      "orgname_ch": "爱心无国界基金会",
+      "psu_en": "Anhui Health and Family Planning Commission",
+      "originloc": "United States",
+      "sector": "Disabilities, Education, Health, International Relations/Exchange, Labor, Youth",
+      "regloc": "Anhui",
+      "regdate": "December 5, 2017",
+      "actarea": "China",
+      "website_en": "http://www.love-international.org/",
+      "website_ch": "http://cn.love-international.org/"
+      }
+      },
+
+
       {
         "type": "Feature",
         "geometry": {
@@ -5307,6 +5374,27 @@
         }
       },
 
+
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.479840, 39.993920
+      ]
+      },
+      "properties": {
+      "orgname_en": "South Korea Institute for Industrial Research",
+      "orgname_ch": "韩国产业研究院",
+      "psu_en": "Beijing Development and Reform Commission",
+      "originloc": "South Korea",
+      "sector": "Economic Development, International Relations/Exchange, Trade",
+      "regloc": "Beijing",
+      "regdate": "December 1, 2017",
+      "actarea": "Beijing, Gansu, Guangdong, Shaanxi, Shandong, Shanghai, Sichuan"
+      }
+      },
+
       {
         "type": "Feature",
         "geometry": {
@@ -5960,7 +6048,27 @@
           "website_ch": "http://www.wwfchina.org/"
         }
       },
-
+      {
+      "type": "Feature",
+      "geometry": {
+      "type": "Point",
+      "coordinates": [
+      116.465925, 40.009833
+      ]
+      },
+      "properties": {
+      "orgname_en": "Wu Zhi Qiao (Bridge to China) Charitable Foundation",
+      "orgname_ch": "无止桥慈善基金",
+      "psu_en": "Ministry of Housing and Urban-Rural Development",
+      "originloc": "Hong Kong",
+      "sector": "Civil Society Capacity-Building, Disaster Relief, Economic Development, Education, Infrastructure, International Relations/Exchange, Poverty Alleviation, Technology",
+      "regloc": "Beijing",
+      "regdate": "December 1, 2017",
+      "actarea": "Beijing",
+      "website_en": "http://www.bridgetochina.org.hk/",
+      "website_ch": "http://www.bridgetochina.org.hk/zh/"
+      }
+      },
       {
       "type": "Feature",
       "geometry": {
