--- a/index.html
+++ b/index.html
@@ -426,6 +426,29 @@
     "website_ch": "https://aicc.org.cn/"
   }
 },
+
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+      116.480578, 39.909873
+    ]
+  },
+  "properties": {
+    "orgname_en": "ApexBrazil",
+    "orgname_ch": "巴西出口投资促进局",
+    "psu_en": "Beijing Commission of Commerce",
+    "originloc": "Brazil",
+    "sector": "Trade",
+    "regloc": "Beijing",
+    "regdate": "December 11, 2017",
+    "actarea": "Beijing, Chongqing, Fujian, Guangdong, Hubei, Jiangsu, Shanghai, Sichuan",
+    "website_en": "http://www.apexbrasil.com.br/en/home",
+    "website_ch": "http://www.apexbrasil.com.br/ch"
+  }
+},
+
 {
   "type": "Feature",
   "geometry": {
@@ -641,7 +664,26 @@
       "website_ch": "http://www.c40.org/china"
       }
       },
-
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.443579, 31.219768
+          ]
+        },
+        "properties": {
+          "orgname_en": "Canada Beef International Institute (Canada Beef)",
+          "orgname_ch": "加拿大牛肉国际协会",
+          "psu_en": "Shanghai Commission of Commerce",
+          "originloc": "Canada",
+          "sector": "Trade",
+          "regloc": "Shanghai",
+          "regdate": "December 14, 2017",
+          "actarea": "China",
+          "website_en": "https://canadabeef.ca/"
+        }
+      },
       {
       "type": "Feature",
       "geometry": {
@@ -3678,6 +3720,26 @@
       }
       },
 
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.457480, 39.931270
+          ]
+        },
+        "properties": {
+          "orgname_en": "Le Comité d'Echanges Franco-Chinois (CEFC)",
+          "orgname_ch": "法国巴黎大区工商会",
+          "psu_en": "Beijing Commission of Commerce",
+          "originloc": "France",
+          "sector": "Education, International Relations/Exchange, Law and Governance, Trade",
+          "regloc": "Beijing",
+          "regdate": "December 12, 2017",
+          "actarea": "Beijing, Guangdong, Shanghai, Sichuan",
+          "website_ch": "http://www.cefc-paris.fr/faguo-bali-daqu-jian-jie/"
+        }
+      },
 
       {
       "type": "Feature",
@@ -4160,6 +4222,47 @@
 "actarea": "Tibet"
 }
 },
+
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+      121.401960, 31.201781
+    ]
+  },
+  "properties": {
+    "orgname_en": "North Jeolla Province Economic and Trade Relations Revitalization Institute",
+    "orgname_ch": "韩国（财）全罗北道经济通商振兴院",
+    "psu_en": "Shanghai Commission of Commerce",
+    "originloc": "South Korea",
+    "sector": "Trade",
+    "regloc": "Shanghai",
+    "regdate": "December 8, 2017",
+    "actarea": "China"
+  }
+},
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+      121.423780, 31.195038
+    ]
+  },
+  "properties": {
+    "orgname_en": "NPES The Association for Suppliers of Printing, Publishing and Converting Technologies",
+    "orgname_ch": "美国NPES全美印刷、出版和纸品加工技术供应商协会",
+    "psu_en": "Shanghai Commission of Commerce",
+    "originloc": "United States",
+    "sector": "Trade",
+    "regloc": "Shanghai",
+    "regdate": "December 8, 2017",
+    "actarea": "China",
+    "website_en": "http://www.npes.org/"
+  }
+},
+
 
       {
         "type": "Feature",
@@ -4977,6 +5080,27 @@
       },
 
       {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            102.750591, 24.949856
+          ]
+        },
+        "properties": {
+          "orgname_en": "Sowers Action",
+          "orgname_ch": "苗圃行动",
+          "psu_en": "Yunnan Department of Education",
+          "originloc": "Hong Kong",
+          "sector": "Education, Youth",
+          "regloc": "Yunnan",
+          "regdate": "December 14, 2017",
+          "actarea": "Yunnan",
+          "website_en": "http://www.sowers.org.hk/eng/index.php",
+          "website_ch": "http://www.sowers.org.hk/"
+        }
+      },
+      {
       "type": "Feature",
       "geometry": {
       "type": "Point",
@@ -5184,6 +5308,27 @@
       "actarea": "Hunan",
       "website_en": "https://www.hgk.hr/english"
       }
+      },
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.441470, 39.909717
+          ]
+        },
+        "properties": {
+          "orgname_en": "The Association for the Promotion of International Trade, Japan (JAPIT)",
+          "orgname_ch": "日本国际贸易促进协会",
+          "psu_en": "Beijing Commission of Commerce",
+          "originloc": "Japan",
+          "sector": "International Relations/Exchange, Trade",
+          "regloc": "Beijing",
+          "regdate": "December 14, 2017",
+          "actarea": "China",
+          "website_ch": "http://www.japitcn.com/top.htm"
+        }
       },
 
       {
@@ -6175,6 +6320,28 @@
           "website_ch": "http://www.zhangxueliang.org.cn/index.php"
         }
       },
+
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            100.217178, 26.887888
+          ]
+        },
+        "properties": {
+          "orgname_en": "Zhi-Shan Foundation Taiwan",
+          "orgname_ch": "至善社会福利基金会",
+          "psu_en": "Yunnan Department of Education",
+          "originloc": "Taiwan",
+          "sector": "Aging, Civil Society Capacity-Building, Education, Gender Issues, Poverty Alleviation, Youth",
+          "regloc": "Yunnan",
+          "regdate": "December 14, 2017",
+          "actarea": "Yunnan",
+          "website_en": "https://www.zhi-shan.org/en",
+          "website_ch": "https://www.zhi-shan.org/"
+        }
+      }
     ]
     };
   // This adds the data to the map
